<resources>
    <string name="app_name">Inventario</string>
    <string name="delete_confirm">¿Eliminar?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>

    <string name="author_name">Nombre</string>
    <string name="author_books_number">%s libros</string>
    <string name="author_books">Libros:</string>
    <string name="author_add_name">Nombre del autor</string>
    <string name="author_add">Nuevo autor</string>

    <string name="book_category">Categoría</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_price">Precio</string>
    <string name="book_saga">Saga</string>
    <string name="book_information">Información</string>
    <string name="book_purchase_date">Fecha de compra</string>
    <string name="book_publisher">Editorial</string>
    <string name="book_show_readings">Ver Lecturas</string>
    <string name="book_owner">Propietario</string>
    <string name="book_image">Portada</string>
    <string name="book_add">Nuevo libro</string>
    <string name="book_title">Título</string>
    <string name="book_format">Formato</string>
    <string name="book_language">Idioma</string>
    <string name="book_synopsis">Resumen</string>
    <string name="book_comments">Observaciones</string>

    <string name="readings">Lecturas</string>
    <string name="reading_reader">Lector</string>
    <string name="reading_start_date">Fecha inicio</string>
    <string name="reading_end_date">Fecha fin</string>
    <string name="reading_add">Nueva lectura</string>
    <string name="reading_date_select">Seleccionar fecha</string>

    <string name="create">Crear</string>
    <string name="close">Cerrar</string>
    <string name="no_results">No se han encontrado resultados</string>
    <string name="required">* Obligatorio</string>

    <string name="language_spanish">CASTELLANO</string>
    <string name="language_english">INGLES</string>
    <string name="language_euskera">EUSKERA</string>
    <string name="language_japanish">JAPONES</string>
    <string name="language_catalan">CATALAN</string>
    
    <string name="format_physical">FISICO</string>
    <string name="format_digital">DIGITAL</string>
    <string name="format_audio">AUDIO</string>


</resources>