<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/etReader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center_horizontal"
        android:hint="@string/reading_reader"
        android:inputType="text"
        android:maxLines="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reading_start_date"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/ic_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reading_end_date"
        app:boxStrokeWidth="0dp"
        android:textAlignment="textStart"
        android:gravity="start"
        app:startIconDrawable="@drawable/ic_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/rbLectura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1" />

    <Button
        android:id="@+id/btAddReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/create" />

</androidx.appcompat.widget.LinearLayoutCompat>