<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/reading_reader"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Juan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/reading_start_date"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="25/03/2023" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/reading_end_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="15/04/2023" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/rbLectura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />

    </LinearLayout>

</androidx.cardview.widget.CardView>